# ixpdimm_sw

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CppProperties.json  LICENSE  Makefile.am  README.md  autogen.sh  build.mk  build_win.cmd  cmakesetup.cmake  configure.ac  createmof.sh  install.cmd  makefile  out
CMake/: setup.cmake
CMake/Find/: Findmath.cmake  Findnumactl.cmake  Findsblim-cmpi.cmake
I18N/: libIntel_i18n.h
debian/: README.Debian  changelog  control  copyright  ixpdimm-cli.install  ixpdimm-data.install  ixpdimm-monitor.install  libixpdimm-cim-dev.install  libixpdimm-cim.install  libixpdimm-cli-dev.install  libixpdimm-cli.install  libixpdimm-dev.install  libixpdimm.install  rules
install/linux/: INSTALLCONFIG.FILE  install.sh  pegasus_deregister.sh  pegasus_register.sh  sfcb_deregister.sh  sfcb_register.sh  uninstall.sh
install/linux/rel-release/: ixpdimm_sw.spec  nvdimm-mgmt.spec
install/linux/sle-release/: ixpdimm_sw.spec  nvdimm-mgmt.spec
install/windows/: install.cmd  uninstall.cmd
intel_cli_framework/: CliFrameworkTypes.h  CommandSpec.h  DuplicateTokenErrorResult.h  ErrorResult.h  FeatureBase.h  FeatureRef.h  Framework.h  HelpFeature.h  Logger.h  NoInputErrorResult.h  NotImplementedErrorResult.h  ObjectListResult.h  Parser.h  PropertyListResult.cpp  PropertyListResult.h  ResultBase.h  SimpleListResult.h  SimpleResult.h  SyntaxErrorBadValueResult.h  SyntaxErrorMissingValueResult.h  SyntaxErrorResult.h  SyntaxErrorUnexpectedValueResult.h  Trace.h
intel_cli_framework/unittest/: GTestExtensions.h
linux_external_libs/: libIntel_i18n.so.99  libIntel_i18n.so.99.99.0  libcimframework.so.99  libcimframework.so.99.99.0  libcliframework.so.99.99.0
scripts/: TestMI.py  create_ixpdimm-cli_manpage.py  create_ixpdimm-monitor_manpage.py  create_nvmcli_manpage.py  create_nvmmonitor_manpage.py  get_max_libtest_arg.sh  ixpdimm-cli.manpage.footer  ixpdimm-cli.manpage.header  ixpdimm-monitor.manpage.text  manpage_helper.py  nvmcli.manpage.header  nvmcli.sed  nvmmonitor.manpage.text
src/acpi/: acpi.c  acpi.h  esx_acpi.c  lnx_acpi.c  makefile  nfit.c  nfit.h  nfit_dimm.c  nfit_interleave.c  nfit_parser.c  nfit_parser.c.template  nfit_parser.h  nfit_parser.h.template  nfit_printer.c  nfit_printer.c.template  nfit_printer.h  nfit_printer.h.template  nfit_tables.h  nfit_tables.h.template  win_acpi.c
src/cli/: cli_resources.rc  makefile  nvmcli.cpp
src/cli/features/: ExportCli.h  makefile
src/common/: common.h  common_types.h  cr_i18n.h  export_common.h  makefile
src/common/acpi/: acpi.c  acpi.h  esx_acpi.c  lnx_acpi.c  makefile  win_acpi.c
src/common/encrypt/: encrypt.c  encrypt.h  public.rev0.pem
src/common/file_ops/: file_ops.c  file_ops_adapter.h  lnx_file_ops.c  makefile  win_file_ops.c
src/common/guid/: guid.c  guid.h
src/common/os/: lnx_os.c  makefile  os_adapter.h  win_msgs.h  win_msgs.mc  win_os.c
src/common/persistence/: config_settings.h  csv_log.c  csv_log.h  event.c  event.h  event_strings.h  lib_persistence.c  lib_persistence.h  logging.c  logging.h  schema.c  schema.h  schema.txt
src/common/smbios/: smbios.c  smbios.h  smbios_types.h
src/common/string/: revision.c  revision.h  s_str.c  s_str.h  unicode_utilities.c  unicode_utilities.h  x_str.c  x_str.h
src/common/system/: jedec_manufacturer.c  jedec_manufacturer.h  system.c  system.h
src/common/time/: time_utilities.c  time_utilities.h
src/common/uid/: uid.c  uid.h
src/core/: Collection.cpp  Collection.h  ExportCore.h  Helper.cpp  Helper.h  LibWrapper.cpp  LibWrapper.h  NvmApi.cpp  NvmApi.h  NvmCore.cpp  NvmLibrary.cpp  NvmLibrary.h  Result.h  StringList.h  core_resources.rc  makefile
src/driver_interface/: esx_passthrough.c  lnx_passthrough.c  makefile  passthrough.c  passthrough.h  win_adapter.c  win_adapter.h  win_passthrough.c
src/firmware_interface/: fis_commands.c  fis_commands.c.template  fis_commands.h  fis_commands.h.template  fis_parser.c  fis_parser.c.template  fis_parser.h  fis_parser.h.template  fw_command_controller.c  fw_command_controller.c.template  fw_command_controller.h  fw_command_controller.h.template  fw_command_custom_printer.c  fw_command_custom_printer.h  fw_command_dump.c  fw_command_dump.c.template  fw_command_dump.h  fw_command_dump.h.template  fw_command_printer.c  fw_command_printer.c.template  fw_command_printer.h  fw_command_printer.h.template  fw_commands.c  fw_commands.c.template  fw_commands.h  fw_commands.h.template  fwcmd_args.c  fwcmd_args.h  makefile
src/ixp/: ixp.c  ixp.h  ixp_prv.h  ixp_types.h  ixp_types.h.template
src/lib/: LogEnterExit.h  adapter_types.h  capabilities.c  capabilities.h  cleanup_support_events.c  cleanup_support_events.h  config_goal.c  config_goal.h  config_goal_utilities.c  config_goal_utilities.h  device.c  device_adapter.h  device_fw.c  device_fw.h  device_utilities.c  device_utilities.h  diagnostic.c  diagnostic.h  diagnostic_fw.c  diagnostic_nfit.c  diagnostic_platform_config.c  diagnostic_platform_config_best_practices.c  diagnostic_pm_metadata.c  diagnostic_quick.c  diagnostic_security.c  error_injection.c  event_field_metadata.c  event_field_metadata.h  export_api.h  fis_types.h  job.c  lib.c  lib_resources.rc  lnx_adapter.c  lnx_adapter.h  lnx_adapter_acpi_events.c  lnx_adapter_namespaces.c  lnx_adapter_passthrough.c  lnx_adapter_pools.c  lnx_system.c  (+69 more)
src/logic/: Helper.cpp  Helper.h  NvmApi.cpp  NvmApi.h
src/monitor/: AcpiEventMonitor.cpp  AcpiEventMonitor.h  EventMonitor.cpp  EventMonitor.h  NvmMonitorBase.cpp  NvmMonitorBase.h  PerformanceMonitor.cpp  PerformanceMonitor.h  ixpdimm-monitor.service  lnx_main.cpp  makefile  monitor_resources.rc  nvmmonitor.service  win_main.cpp  win_service.cpp  win_service.h
src/schema_generator/: main.cpp  makefile
src/wbem/: ExportCim.h  NvmStrings.h  NvmWbem.cpp  makefile  wbem_resources.rc
tools/db_schema_gen/: Attribute.cpp  Attribute.h  CrudSchemaGenerator.cpp  CrudSchemaGenerator.h  Entity.h  Relationship.h  TemplateModifiers.cpp  TemplateModifiers.h  makefile  schema.c.template  schema.h.template  schema_non_template.c
(+496 files in other folders)
